fixing horizontal scroll in main service

--- a/css/main.css
+++ b/css/main.css
@@ -657,6 +657,7 @@ header .toogle .switch:checked:before {
 /*Inicio Main Servicios*/
 .service-main {
   width: 100%;
+  overflow-x: hidden;
 }
 .service-main .service-card {
   width: 100%;
