--- a/scss/html/_service.scss
+++ b/scss/html/_service.scss
@@ -1,6 +1,7 @@
 /*Inicio Main Servicios*/
 .service-main {
     width: 100%;
+    overflow-x: hidden;
 
     .service-card {
         width: 100%;
